feat(address, company, employee, project): java constructor builder pattern